# srt-voiceover

./: .env.example  .gitignore  ADVANCED_FEATURES.md  ADVANCED_FEATURES_EXPLAINED.md  CONTRIBUTING.md  CORRECTION_SUMMARY.md  DELIVERY_CHECKLIST.md  DOCS_INDEX.md  DOCUMENTATION.md  ELASTIC_TIMING_SUMMARY.md  FINAL_STATUS.md  GIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  MANIFEST.in  PHASE_2_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE_SIMPLIFIED.md  TEST_COMPARISON.md  TIME_STRETCH_FEATURE.md  TRANSCRIPTION_FEATURE.md  TRANSCRIPTION_SETUP.md  TRANSLATION_GUIDE.md  TWO_STEP_WORKFLOW.md  VERBOSE_TESTING_GUIDE.md  VOICE_TIMING_MODES.md  WORKFLOWS.md  clean_config.yaml  edgetts_voices_list.md  pyproject.toml  requirements.txt  setup.py  test_config.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: DOCS_INDEX.md  QUICKSTART.md  QUICK_START_ENHANCEMENTS.md  TRANSLATION_GUIDE.md
examples/: config.yaml  sample.srt
src/srt_voiceover/: __init__.py  cli.py  core.py  export.py  quality.py  speaker_detection.py  transcribe.py  translation.py  voice_profiles.py  word_alignment.py
tests/: conftest.py  test_cli.py  test_core.py  test_transcribe.py
